--- a/scss/page/menu.scss
+++ b/scss/page/menu.scss
@@ -87,7 +87,7 @@ nav {
   @include flex-as-jc-center;
   color: $color-black;
   font-size: 3rem;
-  z-index: 5;
+  z-index: 10;
 }
 
 .icone__h--full {
